2.13 - ?
	- Added 'formcode' parameter to all modification requests to fix all
	  cross-site request forgery vulnerabilities
	- URL change: /u/logout => /u$id/logout
	- Bugfix: delete/update all references when deleting a user
	- Optimized random screenshot and VN SQL queries

2.12 - 2010-11-03
	- !scr command for Multi::IRC
	- API: Added 'image' field to get vn
	- API: Slightly improved error messages
	- Re-added /g/debug (for moderators)
	- Improved search
	- Display friendly message in the VN edit scr tab when no release is known
	- Added 1024x576 and 1280x800 screen resolutions
	- Added more comparison VNs for the length field
	- Automatically remove read notifications after a month
	- Added Apple iProduct platform
	- Removed XML sitemap
	- Added image dimensions to screenshot thumbail <img> tags
	- Prefix all cookies with a configurable cookie_prefix
	- Automatically read L10N keys from script.js
	- Compressed the thread listing into one row per thread (instead of two)
	- Use newlines to separate aliases (except when displayed on VN pages)
	- Automatically remove duplicate aliases on /v+/edit
	- Increased maxlength of tag descriptions
	- Bugfix: only redirect VN search to VN page if page=1
	- Bugfix: remove duplicate votes when merging tags (fixes a 500)
	- Bugfix: Multi::Anime: don't crash when anidb returns an invalid or empty year
	- Bugfix: properly order the relations listed on producer pages
	- Bugfix: Various gtintype() related issues
	- Bugfix: background image issue in Opera 10.50

2.11 - 2010-02-06
	- Added Slovak to the language list
	- Centered the thumbnails on the screenshots viewer
	- Improved date selector
	- Made the release date a required field
	- Versioned the deleting and locking of database entries
	- Multi's announcements are colored in blue
	- Abstracted parsing skin config files into a SkinFile module
	- Automatically generate the skin credits on d7, by reading the skin files
	- Only tagmods can create top-level tags